set up basic program infrastructure and cleaned up functions. implemented 'help' and 'list' commands

--- a/config.yml
+++ b/config.yml
@@ -1,19 +1,10 @@
 ---
-doe: "a deer, a female deer"
-ray: "a drop of golden sun"
-pi: 3.14159
-xmas: true
-french-hens: 3
-calling-birds:
-  - huey
-  - dewey
-  - louie
-  - fred
-xmas-fifth-day:
-  calling-birds: four
-  french-hens: 3
-  golden-rings: 5
-  partridges:
-    count: 1
-    location: "a pear tree"
-  turtle-doves: two
+presets:
+  work:
+    - "program1"
+    - "program2"
+    - "program3"
+  gaming:
+    - "program4"
+    - "program5"
+    - "program6"
